unpackaged/main/default/objects/ETT_Quotation__c/ETT_Quotation__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>