unpackaged/main/default/objects/ETT_Quotation__c/fields/ETT_Head_Of_Operation_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>ETT_Head_Of_Operation_Acceptance__c</fullName>
    <label>Head Of Operation Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>