unpackaged/main/default/objects/ETT_Quotation__c/fields/ETT_Head_Of_Operation_Approved__c.field-meta.xml
<CustomField>
    <fullName>ETT_Head_Of_Operation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head Of Operation Approved</label>
    <type>Checkbox</type>
</CustomField>