unpackaged/main/default/objects/ETT_Quotation__c/fields/ETT_Tyre_Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Inspection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inspection Card</label>
    <referenceTo>ETT_Inspection_Card__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>