unpackaged/main/default/objects/ETT_Quotation__c/fields/Kind_Atten__c.field-meta.xml
<CustomField>
    <fullName>Kind_Atten__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kind Atten</label>
    <length>255</length>
    <type>Text</type>
</CustomField>